<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/cicle_logo" />


        <EditText
            android:id="@+id/user_signin_email"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/user_signin_password"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/click_to_sign_up"
            android:layout_gravity="right"
            android:padding="10dp"
            android:id="@+id/user_singin_click_to_sing_In"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/user_signin_signin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/sign_in"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>