<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#4CAF50"
    android:orientation="vertical"
    tools:context=".signUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/cicle_logo" />

        <EditText
            android:id="@+id/user_singup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_your_user_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_singup_member_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_your_member_id"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_singup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_singup_reffercode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_your_friend_member_id_for_refar"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/user_singup_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="Already have account"
            android:textSize="14sp"
            tools:visibility="gone" />

        <Button
            android:id="@+id/user_singup_signup_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4CAF50"
            android:paddingLeft="60dp"
            android:paddingTop="10dp"
            android:paddingRight="60dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up"
            app:cornerRadius="20dp" />
    </LinearLayout>


</LinearLayout>